--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <p>#17 Nnanna Street, Rumunduru Port Harcourt. Rivers State Nigeria</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
